docs/pages/versions/v57.0.0/sdk/calendar.mdx
---
title: Calendar
description: A library that provides an API for interacting with the device's system calendars, events, reminders, and associated records.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-calendar/src'
packageName: 'expo-calendar'
platforms: ['ios*', 'android*']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';

> **important** To provide quicker updates, `expo-calendar` is currently unsupported in Expo Go and Snack. To use it, create a [development build](/develop/development-builds/introduction/#how-would-you-like-to-build-your-development-build).

`expo-calendar` provides an API for interacting with the device's system calendars, events, reminders, and associated records.

Additionally, it provides methods to launch the system-provided calendar UI to allow the user to view or edit events. On iOS, they present either [`EKEventViewController`](https://developer.apple.com/documentation/eventkitui/ekeventviewcontroller) or [`EKEventEditViewController`](https://developer.apple.com/documentation/eventkitui/ekeventeditviewcontroller) as a modal.

## Installation

<APIInstallSection />

## Configuration in app config

You can configure `expo-calendar` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect. If your app does **not** use CNG, then you'll need to manually configure the library.

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-calendar",
        {
          "calendarPermission": "The app needs to access your calendar."
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'calendarPermission',
      platform: 'ios',
      description: 'A string to set the [`NSCalendarsUsageDescription`](#ios) permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your calendar"',
    },
    {
      name: 'remindersPermission',
      platform: 'ios',
      description: 'A string to set the [`NSRemindersUsageDescription`](#ios) permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your reminders"',
    },
    {
      name: 'writeOnlyCalendarPermission',
      platform: 'ios',
      description:
        'A string to set the [`NSCalendarsWriteOnlyAccessUsageDescription`](#ios) permission message, shown when requesting write-only calendar access (iOS 17+). Only used when `writeOnlyAccess` is `true`.',
      default: '"Allow $(PRODUCT_NAME) to add events to your calendars"',
    },
    {
      name: 'writeOnlyAccess',
      platform: 'ios',
      description:
        'When `true`, requests write-only calendar access (iOS 17+). Sets `NSCalendarsWriteOnlyAccessUsageDescription` and omits `NSCalendarsFullAccessUsageDescription`.',
      default: 'false',
    },
  ]}
/>

To localize an iOS calendar or reminders permission message, add the matching usage description keys to the `ios` object in each [locale file](/guides/localization/#translating-app-metadata). The `calendarPermission` property sets both `NSCalendarsUsageDescription` and `NSCalendarsFullAccessUsageDescription`, and `remindersPermission` sets both `NSRemindersUsageDescription` and `NSRemindersFullAccessUsageDescription`. Expo writes the localized values to **InfoPlist.strings** during prebuild.

<ConfigReactNative>

If you're not using Continuous Native Generation ([CNG](/workflow/continuous-native-generation/)) (you're using native **ios** project manually), then you need to configure following permissions in your native project:

- For iOS, add `NSCalendarsUsageDescription`, `NSCalendarsFullAccessUsageDescription`, and `NSRemindersUsageDescription` to your project's **ios/[app]/Info.plist**:

  ```xml
  <key>NSCalendarsUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your calendar</string>
  <key>NSCalendarsFullAccessUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your calendar</string>
  <key>NSRemindersUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your reminders</string>
  ```

  When requesting write-only calendar access on iOS 17+, add `NSCalendarsWriteOnlyAccessUsageDescription` instead of `NSCalendarsFullAccessUsageDescription`:

  ```xml
  <key>NSCalendarsWriteOnlyAccessUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to add events to your calendars</string>
  ```

</ConfigReactNative>

## Usage

```jsx
import * as Calendar from 'expo-calendar';
import { useEffect } from 'react';
import { StyleSheet, View, Text, Button } from 'react-native';

const BasicUsage = () => {
  useEffect(() => {
    (async () => {
      const { status } = await Calendar.requestCalendarPermissions();
      if (status === 'granted') {
        const calendars = Calendar.getCalendars(Calendar.EntityTypes.EVENT);
        console.log('Here are all your calendars:');
        console.log(JSON.stringify(calendars));
      }
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Text>Calendar Module Example</Text>
      <Button title="Create a new calendar" onPress={createCalendar} />
    </View>
  );
};

async function createCalendar() {
  const newCalendar = await Calendar.createCalendar({
    title: 'Expo Calendar',
    color: 'blue',
    entityType: Calendar.EntityTypes.EVENT,
  });
  console.log(`Your new calendar: ${JSON.stringify(newCalendar)}`);
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'space-around',
  },
});
```

## API

```js
import * as Calendar from 'expo-calendar';
```

Unless specified otherwise, all dates are returned in the ISO 8601 format.

<APISection
  packageName="expo-calendar"
  apiName="Calendar"
  headersMapping={{
    systemProvidedUI: 'Launching system-provided calendar dialogs',
  }}
/>

## Permissions

### Android

If you only intend to use the system-provided calendar UI, you don't need to request any permissions.

Otherwise, you must add the following permissions to your **app.json** inside the [`expo.android.permissions`](../config/app/#permissions) array.

<AndroidPermissions permissions={['READ_CALENDAR', 'WRITE_CALENDAR']} />

### iOS

To only add events without reading existing calendar data, enable the `writeOnlyAccess` option in the [config plugin](#configuration-in-app-config) and request write-only access by passing `true` to [`requestCalendarPermissions`](#calendarrequestcalendarpermissionswriteonly). This is sufficient for methods like [`ExpoCalendar.createEvent`](#createeventdetails). Methods that read calendar data, such as [`getCalendars`](#calendargetcalendarsentitytype), [`listEvents`](#calendarlisteventscalendars-startdate-enddate), or [`presentPicker`](#calendarpresentpicker), require full calendar access.

The following usage description keys are used by this library:

<IOSPermissions
  permissions={[
    'NSCalendarsUsageDescription',
    {
      name: 'NSCalendarsFullAccessUsageDescription',
      description:
        "A message that tells the user why the app is requesting full access to the user's calendar data.",
    },
    {
      name: 'NSCalendarsWriteOnlyAccessUsageDescription',
      description:
        "A message that tells the user why the app is requesting write-only access to the user's calendar data.",
    },
    'NSRemindersUsageDescription',
  ]}
/>
